force-app/main/default/objects/PDRI__TestCase__c/PDRI__TestCase__c.object-meta.xml
<CustomObject>
    <label>Test Case</label>
    <nameField>
        <label>Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>