force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__ApprovalLookupField__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ApprovalLookupField__c</fullName>
    <formula>PDRI__TestTemplate__r.PDRI__ApprovalLookupField__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Lookup Field</label>
    <type>Text</type>
</CustomField>