force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__BaselineError__c.field-meta.xml
<CustomField>
    <fullName>PDRI__BaselineError__c</fullName>
    <label>Baseline Error</label>
    <type>TextArea</type>
</CustomField>