force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__BaselineStatus__c.field-meta.xml
<CustomField>
    <fullName>PDRI__BaselineStatus__c</fullName>
    <label>Baseline Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>