force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__Description__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>