force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__Function__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>calculate</fullName>
            </value>
            <value>
                <fullName>contract</fullName>
            </value>
            <value>
                <fullName>renew</fullName>
            </value>
            <value>
                <fullName>amend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>