force-app/main/default/objects/PDRI__TestCase__c/fields/PDRI__QuoteID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__QuoteID__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>